fixing hover of custom scrollbar color change

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -115,7 +115,7 @@ a {
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--yellow-primary-color);
+  background-color: var(--color-yellow-primary);
 }
 
 /* ▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢ */
